--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,54 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
+    <TextView
+        android:id="@+id/typeTextToPrintTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/type_text_to_print"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/purple_700"/>
+
+    <EditText
+        android:id="@+id/typeTextToPrintEditText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/rectangle_background"
+        android:hint="@string/hint_type_text"
+        android:textSize="16sp"
+        android:gravity="top"
+        android:padding="12dp"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/printTextButton"
+        app:layout_constraintEnd_toEndOf="@+id/typeTextToPrintTextView"
+        app:layout_constraintStart_toStartOf="@+id/typeTextToPrintTextView"
+        app:layout_constraintTop_toBottomOf="@+id/typeTextToPrintTextView" />
+
+    <Button
+        android:id="@+id/printTextButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
+        android:text="@string/print"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/typeTextToPrintTextView"
+        app:layout_constraintStart_toStartOf="@+id/typeTextToPrintTextView"
+        app:layout_constraintTop_toBottomOf="@+id/typeTextToPrintTextView"
+        app:layout_constraintVertical_bias="1.0" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
